Update jtreg tests